--- a/src/less/globals/globals.less
+++ b/src/less/globals/globals.less
@@ -7,6 +7,10 @@ body {
     background: @color-white;
 }
 
+.fw-wrapper {
+    .fullw();
+}
+
 .container {
     margin: 0 auto;
     max-width: 1024px;
